<resources>
    <string name="app_name">Lokalizator 3044</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="men_itag_list">Lista iTagów</string>
    <string name="men_settings">Ustawienia</string>
    <string name="men_about">O aplikacji</string>
    <string name="str_mode">Tryb pracy</string>
    <string name="str_sound">Dźwięk dzwonka</string>
    <string name="str_distance">Odległość reakcji</string>
    <string name="str_avatar">Avatar</string>
    <string name="str_name">Nazwa</string>
    <string name="str_ringtone">Dzwonek</string>
    <string name="str_button">Akcja przycisku</string>
    <string name="str_cancel">Anuluj</string>
    <string name="str_save">Zapisz</string>
    <string name="str_saveforall">Zapisz dla wszystkich</string>
    <string name="str_savecustom">Wybierz iTagi</string>
    <string name="str_double_click">Akcja dwukliku</string>
</resources>
